--- a/BackendForFrontendSecurity/webapi/appsettings.Development.json
+++ b/BackendForFrontendSecurity/webapi/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Auth": {
+    "CookieName": "app-bff",
+    "Authority": "https://demo.duendesoftware.com",
+    "ClientId": "interactive.confidential",
+    "ClientSecret": "secret",
+    "Scopes": [
+      "openid",
+      "profile",
+      "email",
+      "api",
+      "offline_access"
+    ]
   }
 }
